fix(site): Jumping around issue

--- a/apps/site/app.css
+++ b/apps/site/app.css
@@ -541,10 +541,6 @@ input, textarea {
   -webkit-font-smoothing: auto;
 }
 
-.content-visibility-auto {
-  content-visibility: auto;
-}
-
 .hero-tag:hover, .hero-tag.active {
   text-shadow: 0 0 10px rgba(255,255,255,0.2);
 }
